--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -7,6 +7,18 @@
  year = {2017}
 }
 
+@article{Allen2015,
+ author = {Allen, Benjamin L. and Taatjes, Dylan J.},
+ doi = {10.1038/nrm3951},
+ journal = {Nature Reviews Molecular Cell Biology},
+ number = {3},
+ pages = {155--166},
+ publisher = {Nature Publishing Group},
+ title = {The Mediator complex: a central integrator of transcription},
+ volume = {16},
+ year = {2015}
+}
+
 @article{Andersson2014,
  author = {Andersson, Robin and Gebhard, Claudia and Miguel-Escalada, Irene and Hoof, Ilka and Bornholdt, Jette and Boyd, Mette and Chen, Yun and Zhao, Xiaobei and Schmidl, Christian and Suzuki, Takahiro and Ntini, Evgenia and Arner, Erik and Valen, Eivind and Li, Kang and Schwarzfischer, Lucia and Glatz, Dagmar and Raithel, Johanna and Lilje, Berit and Rapin, Nicolas and Bagger, Frederik Otzen and J{\o}rgensen, Mette and Andersen, Peter Refsing and Bertin, Nicolas and Rackham, Owen and Burroughs, a Maxwell and Baillie, J Kenneth and Ishizu, Yuri and Shimizu, Yuri and Furuhata, Erina and others},
  doi = {10.1038/nature12787},
@@ -39,6 +51,18 @@
  title = {X-Linked Deafness-2 (DFNX2) Phenotype Associated With a Paracentric Inversion Upstream of {\textless}i{\textgreater}POU3F4{\textless}/i{\textgreater}},
  volume = {23},
  year = {2014}
+}
+
+@article{Aranda2015,
+ author = {Aranda, S. and Mas, G. and {Di Croce}, L.},
+ doi = {10.1126/sciadv.1500737},
+ journal = {Science Advances},
+ number = {11},
+ pages = {e1500737--e1500737},
+ publisher = {American Association for the Advancement of Science},
+ title = {Regulation of gene transcription by Polycomb proteins},
+ volume = {1},
+ year = {2015}
 }
 
 @article{GTExConsortium2015,
@@ -501,6 +525,15 @@
  year = {2014}
 }
 
+@article{Dekker2015,
+ author = {Dekker, Job and Heard, Edith},
+ doi = {10.1016/j.febslet.2015.08.044},
+ journal = {FEBS Letters},
+ publisher = {Federation of European Biochemical Societies},
+ title = {Structural and Functional Diversity of Topologically Associating Domains},
+ year = {2015}
+}
+
 @article{Dekker2013,
  author = {Dekker, Job and Marti-Renom, Marc A and Mirny, Leonid A},
  doi = {10.1038/nrg3454},
@@ -720,17 +753,6 @@
  year = {2005}
 }
 
-@article{Durinck2009b,
- author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
- doi = {10.1038/nprot.2009.97},
- journal = {Nature protocols},
- number = {8},
- pages = {1184--1191},
- title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
- volume = {4},
- year = {2009}
-}
-
 @article{Durinck2009,
  author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
  doi = {10.1038/nprot.2009.97},
@@ -739,6 +761,17 @@
  pages = {1184--1191},
  publisher = {Nature Publishing Group},
  title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt},
+ volume = {4},
+ year = {2009}
+}
+
+@article{Durinck2009b,
+ author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
+ doi = {10.1038/nprot.2009.97},
+ journal = {Nature protocols},
+ number = {8},
+ pages = {1184--1191},
+ title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
  volume = {4},
  year = {2009}
 }
@@ -1073,6 +1106,16 @@
  year = {2015}
 }
 
+@article{Gomez-Diaz2014,
+ author = {G{\'{o}}mez-D{\'{i}}az, Elena and Corces, Victor G},
+ doi = {10.1016/j.tcb.2014.08.003},
+ journal = {Trends in cell biology},
+ pages = {1--9},
+ title = {Architectural proteins: regulators of 3D genome organization in cell fate.},
+ volume = {32},
+ year = {2014}
+}
+
 @article{Gomez-Marin2015,
  author = {G{\'{o}}mez-Mar{\'{i}}n, Carlos and Tena, Juan J. and Acemel, Rafael D. and L{\'{o}}pez-Mayorga, Macarena and Naranjo, Silvia and de la Calle-Mustienes, Elisa and Maeso, Ignacio and Beccari, Leonardo and Aneas, Ivy and Vielmas, Erika and Bovolenta, Paola and Nobrega, Marcelo a. and Carvajal, Jaime and G{\'{o}}mez-Skarmeta, Jos{\'{e}} Luis},
  doi = {10.1073/pnas.1505463112},
@@ -1393,6 +1436,17 @@
  title = {Co-regulation of paralog genes in the three-dimensional chromatin architecture},
  volume = {45},
  year = {2017}
+}
+
+@article{Ing-simmons2015,
+ author = {Ing-Simmons, Elizabeth and Seitan, Vlad C. and Faure, Andre J. and Flicek, Paul and Carroll, Thomas and Dekker, Job and Fisher, Amanda G. and Lenhard, Boris and Merkenschlager, Matthias},
+ doi = {10.1101/gr.184986.114},
+ journal = {Genome research},
+ number = {4},
+ pages = {504--513},
+ title = {Spatial enhancer clustering and regulation of enhancer-proximal genes by cohesin},
+ volume = {25},
+ year = {2015}
 }
 
 @article{Jacobs1959,
@@ -1741,6 +1795,18 @@
  title = {Global changes in the nuclear positioning of genes and intra- and interdomain genomic interactions that orchestrate B cell fate},
  volume = {13},
  year = {2012}
+}
+
+@article{Liu2016b,
+ author = {Liu, Yaping and Sarkar, Abhishek and Kheradpour, Pouya and Ernst, Jason and Kellis, Manolis},
+ doi = {10.1186/s13059-017-1308-x},
+ journal = {Genome Biology},
+ number = {1},
+ pages = {193},
+ publisher = {Genome Biology},
+ title = {Evidence of reduced recombination rate in human regulatory domains},
+ volume = {18},
+ year = {2017}
 }
 
 @article{Long2016,
@@ -2417,6 +2483,17 @@
  title = {A role for noncoding variation in schizophrenia.},
  volume = {9},
  year = {2014}
+}
+
+@article{Rowley2016,
+ author = {Rowley, M Jordan and Corces, Victor G},
+ doi = {10.1016/j.ceb.2016.01.009},
+ journal = {Current Opinion in Cell Biology},
+ pages = {8--14},
+ publisher = {Elsevier Ltd},
+ title = {The three-dimensional genome: principles and roles of long-distance interactions},
+ volume = {40},
+ year = {2016}
 }
 
 @article{Rowley2017,
@@ -3112,6 +3189,17 @@
  year = {2016}
 }
 
+@article{Yu2017,
+ author = {Yu, Miao and Ren, Bing},
+ doi = {10.1146/annurev-cellbio-100616-060531},
+ journal = {Annual Review of Cell and Developmental Biology},
+ number = {1},
+ pages = {annurev--cellbio--100616--060531},
+ title = {The Three-Dimensional Organization of Mammalian Genomes},
+ volume = {33},
+ year = {2017}
+}
+
 @article{Zepeda-Mendoza2017,
  author = {Zepeda-Mendoza, Cinthya J. and Ibn-Salem, Jonas and Kammin, Tammy and Harris, David J. and Rita, Debra and Gripp, Karen W. and MacKenzie, Jennifer J. and Gropman, Andrea and Graham, Brett and Shaheen, Ranad and Alkuraya, Fowzan S. and Brasington, Campbell K. and Spence, Edward J. and Masser-Frye, Diane and Bird, Lynne M. and Spiegel, Erica and Sparkes, Rebecca L. and Ordulu, Zehra and Talkowski, Michael E. and Andrade-Navarro, Miguel A. and Robinson, Peter N. and Morton, Cynthia C.},
  doi = {10.1016/j.ajhg.2017.06.011},
@@ -3285,6 +3373,16 @@
  title = {Integrative analysis of 111 reference human epigenomes.},
  volume = {518},
  year = {2015}
+}
+
+@article{Bortle2014,
+ author = {{Van Bortle}, Kevin and Nichols, Michael H and Li, Li and Ong, Chin-Tong and Takenaka, Naomi and Qin, Zhaohui S and Corces, Victor G},
+ doi = {10.1186/gb-2014-15-5-r82},
+ journal = {Genome biology},
+ pages = {R82},
+ title = {Insulator function and topological domain border strength scale with architectural protein occupancy.},
+ volume = {15},
+ year = {2014}
 }
 
 @article{VietriRudan2015,
