--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -125,6 +125,15 @@
  year = {2011}
 }
 
+@article{Beagrie2017,
+ author = {Beagrie, Robert A. and Scialdone, Antonio and Schueler, Markus and Kraemer, Dorothee C. A. and Chotalia, Mita and Xie, Sheila Q. and Barbieri, Mariano and de Santiago, In{\^{e}}s and Lavitas, Liron-Mark and Branco, Miguel R. and Fraser, James and Dostie, Jos{\'{e}}e and Game, Laurence and Dillon, Niall and Edwards, Paul A. W. and Nicodemi, Mario and Pombo, Ana},
+ doi = {10.1038/nature21411},
+ journal = {Nature},
+ publisher = {Nature Publishing Group},
+ title = {Complex multi-enhancer contacts captured by genome architecture mapping},
+ year = {2017}
+}
+
 @incollection{Becker2015,
  address = {Berlin, Heidelberg},
  author = {Becker, Matthias and Mah, Nancy and Zdzieblo, Daniela and Li, Xiaoli and Mer, Arvind and Andrade-navarro, Miguel A and Mu, Albrecht M},
@@ -1035,6 +1044,16 @@
  year = {1986}
 }
 
+@article{Gerber2018,
+ author = {Gerber, Susanne and Fournier, David and Hewel, Charlotte and Horenko, Illia},
+ doi = {10.1101/255315},
+ journal = {bioRxiv},
+ pages = {255315},
+ publisher = {Cold Spring Harbor Laboratory},
+ title = {Imputation of posterior linkage probability relations reveals a significant influence of structural 3D constraints on linkage disequilibrium},
+ year = {2018}
+}
+
 @article{Ghavi-helm2014,
  author = {Ghavi-Helm, Yad and Klein, Felix a and Pakozdi, Tibor and Ciglar, Lucia and Noordermeer, Daan and Huber, Wolfgang and Furlong, Eileen E M},
  doi = {10.1038/nature13417},
@@ -1320,6 +1339,18 @@
  year = {2016}
 }
 
+@article{Hnisz2017,
+ author = {Hnisz, Denes and Shrinivas, Krishna and Young, Richard A. and Chakraborty, Arup K. and Sharp, Phillip A.},
+ doi = {10.1016/j.cell.2017.02.007},
+ journal = {Cell},
+ number = {1},
+ pages = {13--23},
+ publisher = {Elsevier Inc.},
+ title = {A Phase Separation Model for Transcriptional Control},
+ volume = {169},
+ year = {2017}
+}
+
 @article{Hnisz2016,
  author = {Hnisz, Denes and Weintraub, Abraham S and Day, Daniel S and Valton, Anne-laure and Bak, Rasmus O and Li, Charles H and Goldmann, Johanna and Lajoie, Bryan R and Fan, Zi Peng and Sigova, Alla A and Reddy, Jessica and Borges-Rivera, Diego and Lee, Tong Ihn and Jaenisch, Rudolf and Porteus, Matthew H and Dekker, Job and Young, Richard A},
  doi = {10.1126/science.aad9024},
@@ -1480,6 +1511,18 @@
  title = {De novo occurrence of 46,XX,t(4;13) (q31;q14) in a mentally retarded girl.},
  volume = {18},
  year = {1975}
+}
+
+@article{Ji2016,
+ author = {Ji, Xiong and Dadon, Daniel B. and Powell, Benjamin E. and Fan, Zi Peng and Borges-Rivera, Diego and Shachar, Sigal and Weintraub, Abraham S. and Hnisz, Denes and Pegoraro, Gianluca and Lee, Tong Ihn and Misteli, Tom and Jaenisch, Rudolf and Young, Richard A.},
+ doi = {10.1016/j.stem.2015.11.007},
+ journal = {Cell Stem Cell},
+ number = {2},
+ pages = {262--275},
+ publisher = {Elsevier},
+ title = {3D Chromosome Regulatory Landscape of Human Pluripotent Cells},
+ volume = {18},
+ year = {2016}
 }
 
 @article{Joshi2015,
@@ -2173,6 +2216,16 @@
  title = {Genetic predisposition to neuroblastoma mediated by a LMO1 super-enhancer polymorphism},
  volume = {528},
  year = {2015}
+}
+
+@article{Ong2014,
+ author = {Ong, Chin-Tong and Corces, Victor G.},
+ doi = {10.1038/nrg3663},
+ journal = {Nature Reviews Genetics},
+ number = {March},
+ publisher = {Nature Publishing Group},
+ title = {CTCF: an architectural protein bridging genome topology and function},
+ year = {2014}
 }
 
 @article{Ordulu2016,
@@ -2907,6 +2960,18 @@
  year = {2017}
 }
 
+@article{Strom2017,
+ author = {Strom, Amy R and Emelyanov, Alexander V and Mir, Mustafa and Fyodorov, Dmitry V and Darzacq, Xavier and Karpen, Gary H},
+ doi = {10.1038/nature22989},
+ journal = {Nature Publishing Group},
+ number = {7662},
+ pages = {241--245},
+ publisher = {Nature Publishing Group},
+ title = {Phase separation drives heterochromatin domain formation},
+ volume = {547},
+ year = {2017}
+}
+
 @article{Symmons2014,
  author = {Symmons, Orsolya and Uslu, Veli Vural and Tsujimura, Taro and Ruf, Sandra and Nassari, Sonya and Schwarzer, Wibke and Ettwiller, Laurence and Spitz, Fran{\c{c}}ois},
  doi = {10.1101/gr.163519.113},
@@ -3327,6 +3392,18 @@
  title = {Cohesin and CTCF differentially affect chromatin architecture and gene expression in human cells.},
  volume = {111},
  year = {2014}
+}
+
+@article{DiPierro2017,
+ author = {{Di Pierro}, Michele and Cheng, Ryan R and {Lieberman Aiden}, Erez and Wolynes, Peter G and Onuchic, Jos{\'{e}} N},
+ doi = {10.1073/pnas.1714980114},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ number = {46},
+ pages = {12126--12131},
+ publisher = {National Academy of Sciences},
+ title = {De novo prediction of human chromosome structures: Epigenetic marking patterns encode genome architecture.},
+ volume = {114},
+ year = {2017}
 }
 
 @article{Altshuler2010,
